[gd_scene load_steps=7 format=3 uid="uid://c0vxvou1i8y5k"]

[ext_resource type="Script" path="res://person_v_1.gd" id="1_ja1lh"]
[ext_resource type="Texture2D" uid="uid://ll3ylypmj702" path="res://assets/character_brown_white.png" id="2_a5xw8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7gfu1"]
radius = 24.0
height = 72.0

[sub_resource type="Animation" id="Animation_4ac5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="Animation" id="Animation_ly8fl"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [3.14159, 2.78904, 3.14159, 3.49066, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3tqif"]
_data = {
"RESET": SubResource("Animation_4ac5q"),
"walk": SubResource("Animation_ly8fl")
}

[node name="PersonV1" type="CharacterBody2D"]
scale = Vector2(0.35, 0.35)
collision_layer = 32
collision_mask = 30
motion_mode = 1
script = ExtResource("1_ja1lh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_a5xw8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7gfu1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 147486
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-2, -46)
polygon = PackedVector2Array(-86, -54, -20, 10, 16, 8, 66, -58)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3tqif")
}

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = 34.0
offset_right = 20.0
offset_bottom = 60.0
scale = Vector2(2.71795, 2.51518)
text = "Fam"

[node name="TalkTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CollideTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TalkTimer" to="." method="_on_talk_timer_timeout"]
[connection signal="timeout" from="CollideTimer" to="." method="_on_collide_timer_timeout"]
